# stats

./: .envrc  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  app.css  degit.json  evidence.config.yaml  evidence.plugins.yaml  meltano.yml  package-lock.json  package.json  renovate.json  setup.py  tap_gharchive.py
.claude/: launch.json
.cursor/: mcp.json
.cursor/rules/: architecture.mdc
.devcontainer/: devcontainer.json
.evidence/customization/: .profile.json
.github/: CODEOWNERS
.github/workflows/: build.yml  claude-code-review.yml  claude.yml  lint_strict_syntax.yml  pipeline_debugger.yml  (+6 more)
components/: DownloadStatsJson.svelte  StrictSyntaxReport.svelte
docs/: architecture.md  strict_syntax_migration.md
old_stats/: contributor_leaderboard_table.html  core_repos_table.html  html_2_csv.py  nf-core-statistics_pipeline.bash  old_pipeline_table.html  stats.php  stats_static.html  update_issue_stats.php
pages/: +layout.svelte  index.md  new-page.md  regulatory.md  views.md
pipeline/: .envrc  .gitignore  README.md  gharchive_pipeline.py  github_pipeline.py  github_stats.py  pyproject.toml  slack_pipeline.py  slack_stats.py  twitter_pipeline.py
pipeline/docs/: README.md  notes.md
pipeline/regulatory/data/: nfcore_pipelines.json
pipeline/scripts/: seed_strict_syntax_demo.py
pipeline/slack/: __init__.py  helpers.py
pipeline/src/nf_core_stats/: __init__.py  _github.py  _logging.py  citations_pipeline.py  github_pipeline.py  newsletter_pipeline.py  ses_pipeline.py  slack_pipeline.py  strict_syntax_pipeline.py
pipeline/src/nf_core_stats/strict_syntax/: __init__.py  backfill.py  fetch.py  git_utils.py  history.py  lint.py  modules.py  nextflow.py  paths.py  pipelines.py
queries/: community_growth.sql
regulatory/: README.md  get_stats.py  pyproject.toml  regulatory_report.qmd  report_helpers.py
scripts/: dev-preview.sh
(+92 files in other folders)
