[project]
name = "nf-core-stats"
version = "0.1.0"
description = "DLT pipeline for nf-core stats collection"
authors = [
    { name = "nf-core team" }
]
dependencies = [
    "dlt[cli,duckdb,motherduck]>=1.4.1",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "slack-sdk>=3.33.0",
    "pendulum>=2.1.2",
]
requires-python = ">=3.9"

[project.scripts]
slack = "python slack_pipeline.py"
github = "python github_pipeline.py"
twitter = "python twitter_pipeline.py"
# TODO
# lint = "ruff check ."
# format = "ruff format ."